--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -22,7 +22,7 @@ jobs:
       uses: DeterminateSystems/nix-installer-action@main
       #with:
       #github_access_token: ${{ secrets.GITHUB_TOKEN }}
-    - run: nix build .#nixosConfigurations.iso.config.system.build.isoImage
+    - run: nix build .#nixosConfigurations.iso.config.system.build.isoImage --accept-flake-config
     - name: Upload ISO as artifact
       id: upload
       uses: actions/upload-artifact@v4
