--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -1,15 +1,16 @@
 name: "Build ISO"
-
 on:
   workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}-iso
   cancel-in-progress: true
-
 jobs:
     ISO:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: "write"
+      contents: "read"
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v4
