--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -14,6 +14,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
-      - uses: DeterminateSystems/flake-checker-action@main
-      - name: Run `nix build`
-        run: nix build . --extra-experimental-features "nix-command flakes"
+      #- uses: DeterminateSystems/flake-checker-action@main
+      - name: Run `nix run flake checker`
+        run: nix run github:DeterminateSystems/flake-checker --extra-experimental-features "nix-command flakes"
