--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -1,32 +1,41 @@
-name: "Build ISO"
+name: Build 🏗️ and Publish 📀
 
 on:
-  workflow_dispatch:
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref || github.run_id }}-iso
-  cancel-in-progress: true
+  push:
+    tags: ['*']
 
 jobs:
-  ISO:
+  build-console-iso:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: "write"
-      contents: "read"
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v4
-    - name: install nix
-      uses: DeterminateSystems/nix-installer-action@main
-      #with:
-      #github_access_token: ${{ secrets.GITHUB_TOKEN }}
-    - run: nix build .#iso
-    - name: Upload ISO as artifact
-      id: upload
-      uses: actions/upload-artifact@v4
-      with:
-          name: ISO
-          path: |
-            ./result/iso/*.iso
-          if-no-files-found: error
-          retention-days: 0
-          compression-level: 0
+    - uses: actions/checkout@v4
+    - uses: DeterminateSystems/nix-installer-action@v14
+    - uses: DeterminateSystems/magic-nix-cache-action@v8
+    - name: Build 👷 ISO 💿️
+      run: |
+        nix build .#nixosConfigurations.iso-console.config.system.build.isoImage -L
+        mkdir iso || true
+        ISO=$(head -n1 result/nix-support/hydra-build-products | cut -d'/' -f6)
+        sudo mv "result/iso/${ISO}" iso/console-${ISO}
+        sha256sum "iso/console-${ISO}" > "iso/console-${ISO}.sha256"
+        sed -i -r "s/ .*\/(.+)/  \1/g" "iso/console-${ISO}.sha256"
+    - name: Draft release ✍️
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        gh release create "${{ github.ref }}" --draft --generate-notes
+    - name: Upload ⤴️ ISO 💿️
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        for artefact in "iso/"*; do
+          gh release upload "${{ github.ref }}" "${artefact}" --clobber
+        done
+    - name: Publish release 🎁
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        if [ "$(gh release view "${{ github.ref }}" --json assets --template '{{len .assets}}')" -lt 0 ]; then
+          exit 1
+        fi
+        gh release edit "${{ github.ref }}" --draft=false
