--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch:
   push:
 concurrency:
+  group: ${{ github.workflow }}-${{ github.ref || github.run_id }}-iso
   cancel-in-progress: true
 
 jobs:
