--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: DeterminateSystems/nix-installer-action@v14
     - uses: DeterminateSystems/magic-nix-cache-action@v8
+    - name: Build Custom ISO
       run: |
         nix build .#iso -L --accept-flake-config
         mkdir iso || true
