--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -27,7 +27,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        for artefact in "iso/*"; do
+        for artefact in "./iso/*"; do
           gh release upload "${{ github.ref }}" "${artefact}" --clobber
         done
     - name: Publish
