--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -1,4 +1,4 @@
-name: ISO build
+name: build and release
 
 on:
   workflow_dispatch:
@@ -13,11 +13,14 @@ jobs:
     - uses: actions/checkout@v4
     - uses: DeterminateSystems/nix-installer-action@v14
     - uses: DeterminateSystems/magic-nix-cache-action@v8
-    - name: Build Custom ISO
+    - name: build ISO
       run: |
-        nix build .#iso -L --accept-flake-config
+        nix build .#iso -L
         mkdir iso || true
+        ISO=$(head -n1 result/nix-support/hydra-build-products | cut -d'/' -f6)
         sudo mv "result/iso/${ISO}" iso/${ISO}
+        sha256sum "iso/console-${ISO}" > "iso/${ISO}.sha256"
+        sed -i -r "s/ .*\/(.+)/  \1/g" "iso/${ISO}.sha256"
     - name: Upload
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -25,7 +28,7 @@ jobs:
         for artefact in "iso/"*; do
           gh release upload "${{ github.ref }}" "${artefact}" --clobber
         done
-    - name: Publish
+    - name: Release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
