--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -19,7 +19,7 @@ jobs:
         mkdir iso || true
         ISO=$(head -n1 result/nix-support/hydra-build-products | cut -d'/' -f6)
         sudo mv "result/iso/${ISO}" iso/${ISO}
-        sha256sum "iso/console-${ISO}" > "iso/${ISO}.sha256"
+        sha256sum "iso/${ISO}" > "iso/${ISO}.sha256"
         sed -i -r "s/ .*\/(.+)/  \1/g" "iso/${ISO}.sha256"
     - name: Upload
       env:
