--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -18,7 +18,7 @@ jobs:
         nix build .#iso -L
         mkdir iso || true
         ISO=$(head -n1 result/nix-support/hydra-build-products | cut -d'/' -f6)
-        sudo cp "result/iso/${ISO}" iso/${ISO}
+        sudo ln -s "result/iso/${ISO}" iso/${ISO}
         sha256sum "iso/${ISO}" > "iso/${ISO}.sha256"
         sed -i -r "s/ .*\/(.+)/  \1/g" "iso/${ISO}.sha256"
     - name: Upload
