--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -28,10 +28,7 @@ jobs:
           gh release upload "${{ github.ref }}" "${artefact}" --clobber
         done
     - name: Release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        if [ "$(gh release view "${{ github.ref }}" --json assets --template '{{len .assets}}')" -lt 0 ]; then
-          exit 1
-        fi
-        gh release edit "${{ github.ref }}" --draft=false
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/v')
+      with:
+          files: "nyx*.iso*"
