--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -15,20 +15,15 @@ jobs:
     - uses: DeterminateSystems/magic-nix-cache-action@v8
     - name: build ISO
       run: |
-        nix build .#iso -L
+        nix build .#iso --accept-flake-config
         mkdir iso || true
         ISO=$(head -n1 result/nix-support/hydra-build-products | cut -d'/' -f6)
         sudo ln "result/iso/${ISO}" iso/nyx.iso
+        sha256sum "iso/nyx.iso" > "iso/nyx.iso.sha256"
+        sed -i -r "s/ .*\/(.+)/  \1/g" "iso/nyx.iso.sha256"
         ls -la iso
-    - name: Upload
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        for artefact in "iso/"*; do
-          gh release upload "${{ github.ref }}" "${artefact}" --clobber
-        done
     - name: Release
       uses: softprops/action-gh-release@v2
       if: startsWith(github.ref, 'refs/tags/v')
       with:
-          files: "nyx*.iso*"
+          files: "iso/*"
