--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -26,4 +26,4 @@ jobs:
       uses: softprops/action-gh-release@v2
       if: startsWith(github.ref, 'refs/tags/v')
       with:
-          files: "iso/*"
+          files: "./iso/*"
