--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -24,5 +24,6 @@ jobs:
         ls -la iso
     - name: Release
       uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/v')
       with:
           files: "./iso/*"
