--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -22,8 +22,13 @@ jobs:
         sha256sum "iso/nyx.iso" > "iso/nyx.iso.sha256"
         sed -i -r "s/ .*\/(.+)/  \1/g" "iso/nyx.iso.sha256"
         ls -la iso
-    - name: Release
-      uses: softprops/action-gh-release@v2
-      if: startsWith(github.ref, 'refs/tags/v')
+    - name: Upload ISO as artifact
+      id: upload
+      uses: actions/upload-artifact@v4
       with:
-          files: "./iso/*"
+          name: ISO
+          path: |
+            ./result/iso/*.iso
+          if-no-files-found: error
+          retention-days: 0
+          compression-level: 0
